--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
           <h2 class="secondary-title" hidden>Our goal</h2>
           <ul class="section-list list">
             <li class="item-secondary-section">
+              <div class="secondary-section-picture">
+                <svg class="picture-list-icon" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Strategy</h3>
               <p class="text-description">
                 Our goal is to identify the business problem to walk away with the perfect and
@@ -66,6 +71,11 @@
               </p>
             </li>
             <li class="item-secondary-section">
+              <div class="secondary-section-picture">
+                <svg class="picture-list-icon" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Punctuality</h3>
               <p class="text-description">
                 Bring the key message to the brand's audience for the best price within the shortest
@@ -73,6 +83,11 @@
               </p>
             </li>
             <li class="item-secondary-section">
+              <div class="secondary-section-picture">
+                <svg class="picture-list-icon" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Diligence</h3>
               <p class="text-description">
                 Research and confirm brands that present the strongest digital growth opportunities
@@ -80,6 +95,11 @@
               </p>
             </li>
             <li class="item-secondary-section">
+              <div class="secondary-section-picture">
+                <svg class="picture-list-icon" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Technologies</h3>
               <p class="text-description">
                 Design practice focused on digital experiences. We bring forth a deep passion for
@@ -121,6 +141,56 @@
               <div class="employees-text-content">
                 <h3 class="subtitle">Mark Guerrero</h3>
                 <p class="text-description">Product Designer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        aria-label="іконка інстаграму"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        aria-label="іконка твітера"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        aria-label="іконка фейсбука"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        aria-label="іконка лінкедина"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="employees-list-item">
@@ -133,6 +203,56 @@
               <div class="employees-text-content">
                 <h3 class="subtitle">Tom Ford</h3>
                 <p class="text-description">Frontend Developer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        aria-label="іконка інстаграму"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        aria-label="іконка твітера"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        aria-label="іконка фейсбука"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        aria-label="іконка лінкедина"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="employees-list-item">
@@ -145,6 +265,56 @@
               <div class="employees-text-content">
                 <h3 class="subtitle">Camila Garcia</h3>
                 <p class="text-description">Marketing</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        aria-label="іконка інстаграму"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        aria-label="іконка твітера"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        aria-label="іконка фейсбука"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        aria-label="іконка лінкедина"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="employees-list-item">
@@ -157,21 +327,150 @@
               <div class="employees-text-content">
                 <h3 class="subtitle">Daniel Wilson</h3>
                 <p class="text-description">UI Designer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        aria-label="іконка інстаграму"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        aria-label="іконка твітера"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        aria-label="іконка фейсбука"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        aria-label="іконка лінкедина"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--5 секция Клиенты-->
+      <section class="section-customers">
+        <div class="container">
+          <h1 class="section-title">Customers</h1>
+          <ul class="section-customer-list list">
+            <li class="customers-list-item">
+              <a class="customers-link" href=""
+                ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-group-a"></use></svg
+              ></a>
+            </li>
+            <li class="customers-list-item">
+              <a class="customers-link link" href=""
+                ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-group-b"></use></svg
+              ></a>
+            </li>
+            <li class="customers-list-item">
+              <a class="customers-link link" href=""
+                ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-group-c"></use></svg
+              ></a>
+            </li>
+            <li class="customers-list-item">
+              <a class="customers-link link" href=""
+                ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-group-d"></use></svg
+              ></a>
+            </li>
+            <li class="customers-list-item">
+              <a class="customers-link link" href=""
+                ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-group-i"></use></svg
+              ></a>
+            </li>
+            <li class="customers-list-item">
+              <a class="customers-link link" href=""
+                ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-group-f"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer link" href="./index.html"
-          >WEB<span class="logo-studio-footer">Studio</span></a
-        >
-        <p class="paragraf-footer">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
+      <div class="container footer-list">
+        <div>
+          <a class="logo-footer link" href="./index.html"
+            >WEB<span class="logo-studio-footer">Studio</span></a
+          >
+          <p class="paragraf-footer">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
+        <div>
+          <p class="title-footer">Cocial media</p>
+          <ul class="social-list list">
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg class="social-list-icon" aria-label="іконка інстаграму" width="16" height="16">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg class="social-list-icon" aria-label="іконка твітера" width="16" height="16">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg class="social-list-icon" aria-label="іконка фейсбука" width="16" height="16">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg class="social-list-icon" aria-label="іконка лінкедина" width="16" height="16">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
