--- a/index.html
+++ b/index.html
@@ -442,28 +442,29 @@
           <p class="title-footer">Cocial media</p>
           <ul class="social-list list">
             <li class="social-list-item">
-              <a href="" class="social-list-link">
+              <a href="" class="social-list-link-footer">
                 <svg class="social-list-icon" aria-label="іконка інстаграму" width="24" height="24">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="" class="social-list-link">
+              <a href="" class="social-list-link-footer">
                 <svg class="social-list-icon" aria-label="іконка твітера" width="24" height="24">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
+
             <li class="social-list-item">
-              <a href="" class="social-list-link">
+              <a href="" class="social-list-link-footer">
                 <svg class="social-list-icon" aria-label="іконка фейсбука" width="24" height="24">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="" class="social-list-link">
+              <a href="" class="social-list-link-footer">
                 <svg class="social-list-icon" aria-label="іконка лінкедина" width="24" height="24">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
