--- a/portfolio.html
+++ b/portfolio.html
@@ -189,14 +189,50 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer logo link" href="./index.html"
-          >WEB<span class="logo-studio-footer">Studio</span></a
-        >
-        <p class="paragraf-footer">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
+      <div class="container footer-list">
+        <div>
+          <a class="logo-footer link" href="./index.html"
+            >WEB<span class="logo-studio-footer">Studio</span></a
+          >
+          <p class="paragraf-footer">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
+        <div>
+          <p class="title-footer">Cocial media</p>
+          <ul class="social-list list">
+            <li class="social-list-item">
+              <a href="" class="social-list-link-footer">
+                <svg class="social-list-icon" aria-label="іконка інстаграму" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link-footer">
+                <svg class="social-list-icon" aria-label="іконка твітера" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social-list-item">
+              <a href="" class="social-list-link-footer">
+                <svg class="social-list-icon" aria-label="іконка фейсбука" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link-footer">
+                <svg class="social-list-icon" aria-label="іконка лінкедина" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
