--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <li class="item-secondary-section">
               <div class="secondary-section-picture">
                 <svg class="picture-list-icon" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="subtitle">Strategy</h3>
@@ -73,7 +73,7 @@
             <li class="item-secondary-section">
               <div class="secondary-section-picture">
                 <svg class="picture-list-icon" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="subtitle">Punctuality</h3>
@@ -85,7 +85,7 @@
             <li class="item-secondary-section">
               <div class="secondary-section-picture">
                 <svg class="picture-list-icon" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="subtitle">Diligence</h3>
@@ -97,7 +97,7 @@
             <li class="item-secondary-section">
               <div class="secondary-section-picture">
                 <svg class="picture-list-icon" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="subtitle">Technologies</h3>
@@ -150,7 +150,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -162,7 +162,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -174,7 +174,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -186,7 +186,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -212,7 +212,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -224,7 +224,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -236,7 +236,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -248,7 +248,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -274,7 +274,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -286,7 +286,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -298,7 +298,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -310,7 +310,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -336,7 +336,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -348,7 +348,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -360,7 +360,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -372,7 +372,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -390,37 +390,37 @@
             <li class="customers-list-item">
               <a class="customers-link" href=""
                 ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-group-a"></use></svg
+                  <use href="./images/icons.svg#icon-group-a"></use></svg
               ></a>
             </li>
             <li class="customers-list-item">
               <a class="customers-link link" href=""
                 ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-group-b"></use></svg
+                  <use href="./images/icons.svg#icon-group-b"></use></svg
               ></a>
             </li>
             <li class="customers-list-item">
               <a class="customers-link link" href=""
                 ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-group-c"></use></svg
+                  <use href="./images/icons.svg#icon-group-c"></use></svg
               ></a>
             </li>
             <li class="customers-list-item">
               <a class="customers-link link" href=""
                 ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-group-d"></use></svg
+                  <use href="./images/icons.svg#icon-group-d"></use></svg
               ></a>
             </li>
             <li class="customers-list-item">
               <a class="customers-link link" href=""
                 ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-group-i"></use></svg
+                  <use href="./images/icons.svg#icon-group-i"></use></svg
               ></a>
             </li>
             <li class="customers-list-item">
               <a class="customers-link link" href=""
                 ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-group-f"></use></svg
+                  <use href="./images/icons.svg#icon-group-f"></use></svg
               ></a>
             </li>
           </ul>
@@ -444,14 +444,14 @@
             <li class="social-list-item">
               <a href="" class="social-list-link-footer">
                 <svg class="social-list-icon" aria-label="іконка інстаграму" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-list-link-footer">
                 <svg class="social-list-icon" aria-label="іконка твітера" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -459,14 +459,14 @@
             <li class="social-list-item">
               <a href="" class="social-list-link-footer">
                 <svg class="social-list-icon" aria-label="іконка фейсбука" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-list-link-footer">
                 <svg class="social-list-icon" aria-label="іконка лінкедина" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
