--- a/portfolio.html
+++ b/portfolio.html
@@ -205,14 +205,14 @@
             <li class="social-list-item">
               <a href="" class="social-list-link-footer">
                 <svg class="social-list-icon" aria-label="іконка інстаграму" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-list-link-footer">
                 <svg class="social-list-icon" aria-label="іконка твітера" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -220,14 +220,14 @@
             <li class="social-list-item">
               <a href="" class="social-list-link-footer">
                 <svg class="social-list-icon" aria-label="іконка фейсбука" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-list-link-footer">
                 <svg class="social-list-icon" aria-label="іконка лінкедина" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
