--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
           <h2 class="section-title">Customers</h2>
           <ul class="section-customer-list list">
             <li class="customers-list-item">
-              <a class="customers-link" href=""
+              <a class="customers-link link" href=""
                 ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
                   <use href="./images/icons.svg#icon-group-a"></use></svg
               ></a>
@@ -442,14 +442,14 @@
           <p class="title-footer">Cocial media</p>
           <ul class="social-list list">
             <li class="social-list-item">
-              <a href="" class="social-list-link-footer">
+              <a href="" class="social-list-link-footer link">
                 <svg class="social-list-icon" aria-label="іконка інстаграму" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="" class="social-list-link-footer">
+              <a href="" class="social-list-link-footer link">
                 <svg class="social-list-icon" aria-label="іконка твітера" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
@@ -457,14 +457,14 @@
             </li>
 
             <li class="social-list-item">
-              <a href="" class="social-list-link-footer">
+              <a href="" class="social-list-link-footer link">
                 <svg class="social-list-icon" aria-label="іконка фейсбука" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="" class="social-list-link-footer">
+              <a href="" class="social-list-link-footer link">
                 <svg class="social-list-icon" aria-label="іконка лінкедина" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
