--- a/portfolio.html
+++ b/portfolio.html
@@ -190,7 +190,7 @@
     </main>
     <footer class="footer">
       <div class="container footer-list">
-        <div>
+        <div class="block-footer-logo">
           <a class="logo-footer link" href="./index.html"
             >WEB<span class="logo-studio-footer">Studio</span></a
           >
@@ -201,7 +201,7 @@
         </div>
         <div>
           <p class="title-footer">Cocial media</p>
-          <ul class="social-list list">
+          <ul class="social-list-footer list">
             <li class="social-list-item">
               <a href="" class="social-list-link-footer">
                 <svg class="social-list-icon" aria-label="іконка інстаграму" width="24" height="24">
