--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
     </main>
     <footer class="footer">
       <div class="container footer-list">
-        <div>
+        <div class="block-footer-logo">
           <a class="logo-footer link" href="./index.html"
             >WEB<span class="logo-studio-footer">Studio</span></a
           >
@@ -439,8 +439,8 @@
           </p>
         </div>
         <div>
-          <p class="title-footer">Cocial media</p>
-          <ul class="social-list list">
+          <p class="title-footer">Social media</p>
+          <ul class="social-list-footer list">
             <li class="social-list-item">
               <a href="" class="social-list-link-footer link">
                 <svg class="social-list-icon" aria-label="іконка інстаграму" width="24" height="24">
