--- a/portfolio.html
+++ b/portfolio.html
@@ -200,7 +200,7 @@
           </p>
         </div>
         <div>
-          <p class="title-footer">Cocial media</p>
+          <p class="title-footer">Social media</p>
           <ul class="social-list-footer list">
             <li class="social-list-item">
               <a href="" class="social-list-link-footer">
