--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
           </ul>
           <ul class="portfolio-card-list list">
             <li class="item-portfolio-card">
-              <a class="link" href="">
+              <a class="link-portfolio-picture link" href="">
                 <img
                   src="./images/project_card/img.jpg"
                   alt="Banking App Interface Concept"
@@ -73,7 +73,7 @@
               >
             </li>
             <li class="item-portfolio-card">
-              <a class="link" href="">
+              <a class="link-portfolio-picture link" href="">
                 <img
                   src="./images/project_card/img1.jpg"
                   alt="Cashless Payment"
@@ -87,7 +87,7 @@
               >
             </li>
             <li class="item-portfolio-card">
-              <a class="link" href="">
+              <a class="link-portfolio-picture link" href="">
                 <img
                   src="./images/project_card/img2.jpg"
                   alt="Meditation App"
@@ -101,7 +101,7 @@
               >
             </li>
             <li class="item-portfolio-card">
-              <a class="link" href="">
+              <a class="link-portfolio-picture link" href="">
                 <img
                   src="./images/project_card/img3.jpg"
                   alt="Taxi Service"
@@ -115,7 +115,7 @@
               >
             </li>
             <li class="item-portfolio-card">
-              <a class="link" href="">
+              <a class="link-portfolio-picture link" href="">
                 <img
                   src="./images/project_card/img4.jpg"
                   alt="Screen Illustrations"
@@ -129,7 +129,7 @@
               >
             </li>
             <li class="item-portfolio-card">
-              <a class="link" href="">
+              <a class="link-portfolio-picture link" href="">
                 <img
                   src="./images/project_card/img5.jpg"
                   alt="Online Courses"
@@ -143,7 +143,7 @@
               >
             </li>
             <li class="item-portfolio-card">
-              <a class="link" href="">
+              <a class="link-portfolio-picture link" href="">
                 <img
                   src="./images/project_card/img6.jpg"
                   alt="Instagram Stories Concept"
@@ -157,7 +157,7 @@
               >
             </li>
             <li class="item-portfolio-card">
-              <a class="link" href="">
+              <a class="link-portfolio-picture link" href="">
                 <img
                   src="./images/project_card/img7.jpg"
                   alt="Organic Food"
@@ -171,7 +171,7 @@
               >
             </li>
             <li class="item-portfolio-card">
-              <a class="link" href="">
+              <a class="link-portfolio-picture link" href="">
                 <img
                   src="./images/project_card/img8.jpg"
                   alt="Fresh Coffee"
