--- a/index.html
+++ b/index.html
@@ -386,40 +386,40 @@
       <section class="section-customers">
         <div class="container">
           <h2 class="section-title">Customers</h2>
-          <ul class="section-customer-list list">
-            <li class="customers-list-item">
+          <ul class="customers-list list">
+            <li class="customers-item">
               <a class="customers-link link" href=""
-                ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
+                ><svg class="customers-icon" aria-label="іконка" width="104" height="56">
                   <use href="./images/icons.svg#icon-group-a"></use></svg
               ></a>
             </li>
-            <li class="customers-list-item">
+            <li class="customers-item">
               <a class="customers-link link" href=""
-                ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
+                ><svg class="customers-icon" aria-label="іконка" width="104" height="56">
                   <use href="./images/icons.svg#icon-group-b"></use></svg
               ></a>
             </li>
-            <li class="customers-list-item">
+            <li class="customers-item">
               <a class="customers-link link" href=""
-                ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
+                ><svg class="customers-icon" aria-label="іконка" width="104" height="56">
                   <use href="./images/icons.svg#icon-group-c"></use></svg
               ></a>
             </li>
-            <li class="customers-list-item">
+            <li class="customers-item">
               <a class="customers-link link" href=""
-                ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
+                ><svg class="customers-icon" aria-label="іконка" width="104" height="56">
                   <use href="./images/icons.svg#icon-group-d"></use></svg
               ></a>
             </li>
-            <li class="customers-list-item">
+            <li class="customers-item">
               <a class="customers-link link" href=""
-                ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
+                ><svg class="customers-icon" aria-label="іконка" width="104" height="56">
                   <use href="./images/icons.svg#icon-group-i"></use></svg
               ></a>
             </li>
-            <li class="customers-list-item">
+            <li class="customers-item">
               <a class="customers-link link" href=""
-                ><svg class="customers-list-icon" aria-label="іконка" width="104" height="56">
+                ><svg class="customers-icon" aria-label="іконка" width="104" height="56">
                   <use href="./images/icons.svg#icon-group-f"></use></svg
               ></a>
             </li>
